--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <body>
     <div class="background">
         <div class="logo">
-            <div class="stick1">
-                <div class="lines"></div>
-                <div class="color1"></div>
-            </div>
-            <div class="stick2">
+            <div class="brush">
                 <div class="color"></div>
+                <div class="lines"></div>
             </div>
-            <div class="stick3"></div>
+            <div class="brush2">
+                <div class="color2"></div>
+            </div>
+            <div class="brush3">
+            </div>
         </div>
     </div>
 </body>
