--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix-animation</title>
-    <script src="./app.js" defer></script>
+    <title>netflix-intro-animation</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./app.js" defer></script>
 </head>
 <body>
     <div class="background">
         <div class="logo">
-            <div class="brush">
+            <div class="brush1">
                 <div class="color"></div>
                 <div class="lines"></div>
             </div>
             <div class="brush2">
                 <div class="color2"></div>
             </div>
-            <div class="brush3">
-            </div>
-        </div>
+            <div class="brush3"></div>
+        </div>  
     </div>
 </body>
 </html>
